MODIFY: The third version of the JavaFX interface has been updated with a small icon to indicate the status of the updater